# SpeedOptim

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: benchmarking.py
src/: lib.rs
