[package]
name = "speedoptim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "speedoptim"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.19.0"
features = ["abi3-py38"]

[dependencies]
rand = "0.8.4"

[profile.release]
debug = true       # Debug symbols for our profiler.
lto = true         # Link-time optimization.
codegen-units = 1  # Slower compilation but faster code. 
